--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-switch": "^1.1.1",
     "@radix-ui/react-tabs": "^1.1.2",
+    "@shadcn/ui": "^0.0.4",
     "@tanstack/react-query": "^5.62.8",
     "@tanstack/react-table": "^8.20.5",
     "axios": "^1.7.9",
@@ -33,12 +34,12 @@
     "react-dom": "^18.2.0",
     "react-toastify": "^11.0.2",
     "recharts": "^2.15.0",
+    "shadcn-ui": "^0.9.4",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "zustand": "^5.0.2"
   },
   "devDependencies": {
-    "@shadcn/ui": "^0.0.4",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
