--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,6 +3,8 @@
   "rules": {
     "react/react-in-jsx-scope": "off",
     "@typescript-eslint/no-explicit-any": "off",
-    "@typescript-eslint/no-unused-vars": "off"
+    "@typescript-eslint/no-unused-vars": "off",
+    "semi": ["error", "never"],
+    "@typescript-eslint/semi": ["error", "never"]
   }
 }
