--- a/package.json
+++ b/package.json
@@ -60,9 +60,11 @@
     "eslint-config-next": "15.0.3",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "msw": "^2.2.3",
+    "msw": "^1.3.2",
     "postcss": "^8.4.49",
+    "prettier": "^3.5.3",
     "tailwindcss": "^3.4.15",
+    "ts-node": "^10.9.1",
     "typescript": "^5"
   }
 }
