--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,7 +4,6 @@
     "react/react-in-jsx-scope": "off",
     "@typescript-eslint/no-explicit-any": "off",
     "@typescript-eslint/no-unused-vars": "off",
-    "semi": ["error", "never"],
-    "@typescript-eslint/semi": ["error", "never"]
+    "semi": ["error", "never"]
   }
 }
